@@ -1,0 +1,9 @@
+class AddProjectDescription < ActiveRecord::Migration
+  def self.up
+    add_column :projects, :description, :text, :default => ''
+  end
+
+  def self.down
+    remove_column :projects, :description
+  end
+end
