@@ -1,4 +1,4 @@
-#!/usr/bin/ruby1.8
+#!/usr/bin/env ruby
 require File.dirname(__FILE__) + '/../config/environment'
 require 'rails_generator'
 require 'rails_generator/scripts/destroy'
