@@ -1,4 +1,4 @@
-#!/usr/bin/ruby1.8
+#!/usr/bin/env ruby
 if ARGV.empty?
   $stderr.puts "Usage: profiler 'Person.expensive_method(10)' [times]"
   exit(1)
