@@ -1,4 +1,4 @@
-#!/usr/bin/ruby1.8
+#!/usr/bin/env ruby
 require 'optparse'
 
 options = { :environment => "development" }
